# rust

SQLite/: Cargo.toml
SQLite/src/: main.rs
bank_account/src/: main.rs
csv_processor/: .gitignore  ARCHITECTURE.md  Cargo.toml  INSTALL.md  QUICKSTART.md  README.md  TREE.txt  data.csv
csv_processor/src/: appender.rs  lib.rs  main.rs  models.rs  reader.rs  updater.rs  writer.rs
ecommerce-platform-ddd/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  docker-compose.yml
ecommerce-platform-ddd/contexts/ordering/: Cargo.toml
ecommerce-platform-ddd/contexts/ordering/src/: lib.rs  main.rs
ecommerce-platform-ddd/contexts/ordering/src/application/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/application/commands/: create_order.rs  mod.rs
ecommerce-platform-ddd/contexts/ordering/src/application/dto/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/application/queries/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/: errors.rs  mod.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/aggregates/: mod.rs  order.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/entities/: mod.rs  order_item.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/events/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/repositories/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/domain/value_objects/: ids.rs  mod.rs  money.rs  order_status.rs
ecommerce-platform-ddd/contexts/ordering/src/infrastructure/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/infrastructure/messaging/: mod.rs
ecommerce-platform-ddd/contexts/ordering/src/infrastructure/persistence/repositories/: in_memory.rs  mod.rs
ecommerce-platform-ddd/shared/: Cargo.toml
ecommerce-platform-ddd/shared/src/: lib.rs
guessing_game/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: closure_function_high_test.rs  generic_test.rs  lifetime.rs  main.rs  option_test.rs  trait_test.rs
json_bytes/: Cargo.toml
my_phrase_processor/: Cargo.toml
my_todo_list/: Cargo.toml
my_variable/: Cargo.toml
yaml/: Cargo.toml
(+18 files in other folders)
