[package]
name = "ordering-context"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
iggy.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

# Local dependencies
shared = { path = "../../shared" }

[dev-dependencies]
mockall.workspace = true
